--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,8 +7,8 @@ sites:
     url: https://marturieathonita.ro
   - name: AthoniteTestimony.com
     url: https://athonitetestimony.com
-  - name: SOTIRAS
-    url: https://sotiras.org
+  - name: Radio Marturie Athonita
+    url: https://radio.mountathos.info/live
 
 
 status-website:
@@ -18,8 +18,8 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Service Status"
+  #introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
     - title: Status
       href: /
