--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -19,7 +19,7 @@ status-website:
   cname: status.marturieathonita.ro
   # baseUrl: /your-repo-name
   logoUrl: https://marturieathonita.ro/wp-content/uploads/2021/07/logo_negru.png
-  name: Upptime
+  name: status.marturieathonita.ro
   introTitle: "Service Status"
   #introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
