--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,11 +3,16 @@ owner: CortexNetwork # Your GitHub organization or username, where this reposito
 repo: uptime # The name of this repository
 
 sites:
-  - name: MarturieAthonita.ro
+  - name: marturieathonita.ro
     url: https://marturieathonita.ro
-  - name: AthoniteTestimony.com
+  - name: athonitetestimony.com
     url: https://athonitetestimony.com
-
+  - name: sotiras.org
+    url: https://sotiras.org
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -26,3 +31,9 @@ status-website:
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
+
+status-website:
+  theme: dark
+
+i18n:
+  footer: © 2012 - 2021 Chilia Buna-Vestire 
