--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,7 +28,7 @@ status-website:
   theme: light
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: status.marturieathonita.ro
+  cname: status.athonit.com
   # baseUrl: /your-repo-name
   logoUrl: https://marturieathonita.ro/wp-content/uploads/2021/07/logo_negru.png
   name: status
